# gaussian_explorer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILLS_CHANGELOG.md  WORKFLOW.md  WORKFLOW_CONVENTIONS.md  blue_cross_data_points.csv  considerations.txt  gaussian_process_explorer_user_stories.md  mkdocs.yml  plotly_test.py  pyproject.toml  sinc_noiseless copy.csv  sinc_noiseless.csv  test.csv  test_load.py  tiny_mean_curve_dataset.csv  x_sin_x_noisy.csv
docs/: architecture.md  development.md  getting-started.md  index.md  workflow.md
docs/api/: index.md
repository_templates/: change_request.md  issue.md
sdlc_docs/: README.md
sdlc_docs/00_project_context/: README.md  project_context.md
sdlc_docs/01_requirements/: 00_raw_ideas.md  01_user_stories.md  02_traceability_matrix.md  03_user_story_product_readiness.md  04_user_story_technical_readiness.md  README.md  user_stories_PRDB-002.md
sdlc_docs/02_architecture/: 00_architecture_document.md  00_architecture_overview.md  01_architecture_traceability.md  01_story_architecture_map.md  README.md
sdlc_docs/03_implementation/: 00_implementation_plan.md  00_repository_issue_registry.md  01_implementation_roadmap.md  01_repository_issue_preview.md  README.md
sdlc_docs/04_testing/: 00_testing_strategy.md  01_test_traceability.md  02_testing_results.md  README.md
sdlc_docs/05_validation/: 00_validation_plan.md  01_acceptance_results.md  README.md
sdlc_docs/06_deployment/: 00_deployment_plan.md  01_release_checklist.md  02_rollback_plan.md  README.md
tests/unit/: test_data.py
(+240 files in other folders)
